update about me

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section data-target="about" class="about">
     <h1 class="din">about me</h1>
     <p class="sans">My name is Ethan Herr. I'm a front end engineer and general digital stuff mover-arounder. I code, I animate, I make videos, I make websites, I make apps, I make music. I don't drink coffee, but enjoy a good cup of maté.</p>
-    <p class="sans">I try to keep my <a href="img/resume.pdf" target="_blank">resume</a> up to date... or, well, at least I did up until 2016 or so.</p>
+    <p class="sans">I try to keep my <a href="img/resume.pdf" target="_blank">resume</a> up-to-date for the most part.</p>
     <img src="img/e.jpg" alt="ethan herr">
     <p class="sans">Truth be told, I'm a recovering Jazz musican and closet composer, and have a <a href="https://soundcloud.com/ethan-herr" target="_blank">collection of recordings</a> that fully indulges this alter-ego. I am passionate about all things artistic, and am certain I will remain conflicted about how best to express this throughout my years. But from day to day, I am obsessed with the minutiae of temporal experience. The way a melody is phrased, the way an element responds to interaction, the way a story draws you in, and the way you can communicate through seemingly familiar means while gradually and quietly dissolving layers of convention, so that at the right moment, that slightly odd or unexpected thing just hits home, awakening some new level of understanding. And if all goes well, you inspire the viewer attempt to achieve something just beyond their own understanding too.</p>
   </section>
